Fix: header not stretch

--- a/module/Header/styles/header.module.sass
+++ b/module/Header/styles/header.module.sass
@@ -2,7 +2,7 @@
 
 .header
   display: flex
-  justify-content: space-between
+  gap: 3vw
   align-items: center
   position: sticky
   top: -.2rem
@@ -13,6 +13,8 @@
   align-items: center
   height: 4rem
   backdrop-filter: blur(.2rem)
+  box-sizing: border-box
+  min-width: 100vw
 
 .logo
   display: flex
